--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,70 @@
 @import "tailwindcss";
 
+/* Zain font family - all weights and styles */
+@font-face {
+    font-family: "Zain";
+    src: url("./assets/fonts/Zain-ExtraLight.ttf") format("truetype");
+    font-weight: 200;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Zain";
+    src: url("./assets/fonts/Zain-Light.ttf") format("truetype");
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Zain";
+    src: url("./assets/fonts/Zain-LightItalic.ttf") format("truetype");
+    font-weight: 300;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Zain";
+    src: url("./assets/fonts/Zain-Regular.ttf") format("truetype");
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Zain";
+    src: url("./assets/fonts/Zain-Italic.ttf") format("truetype");
+    font-weight: 400;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Zain";
+    src: url("./assets/fonts/Zain-Bold.ttf") format("truetype");
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Zain";
+    src: url("./assets/fonts/Zain-ExtraBold.ttf") format("truetype");
+    font-weight: 800;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Zain";
+    src: url("./assets/fonts/Zain-Black.ttf") format("truetype");
+    font-weight: 900;
+    font-style: normal;
+    font-display: swap;
+}
+
 @theme {
     --color-primary: #f9943c;       /* Gold */
     --color-primary-dark: #ae4607;  /* Deep Gold */
@@ -14,6 +79,8 @@
     --color-text-primary: #111111;  
     --color-text-secondary: #555555;
     --color-text-light: #9CA3AF;
+
+    --font-family-zain: "Zain", "Cairo", ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   }
   .swiper-pagination-bullet{
     background: #ae4607 !important;
